name:                hosts
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Josh Wright
maintainer:          madewithlinux.josh@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable hosts
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10,
                       http-conduit >=2.1.0,
                       bytestring >=0.10.8.1,
                       containers >=0.5.7.1,
                       text >=1.2.2.1,
                       parallel-io >=0.3.3,
                       either >= 4.4.1.1,
                       filepath == 1.4.1.0,
                       directory >=1.2.6.2

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -O3
    -threaded